--- a/3-ExploreParamPCA.ipynb
+++ b/3-ExploreParamPCA.ipynb
@@ -86,7 +86,7 @@
     "f_2 = 0.151  # LFの終わり、HFのはじめ\n",
     "f_3 = 0.401  # HFの終わり\n",
     "\n",
-    "# start_index = 14\n",
+    "# start_index = 6\n",
     "# end_index = len(movie_paths)\n",
     "\n",
     "# data_dirs = data_dirs[start_index:end_index]\n",
@@ -95,11 +95,11 @@
     "# true_value_csv_array = true_value_csv_array[start_index:end_index]\n",
     "# true_value_rri_csv_array = true_value_rri_csv_array[start_index:end_index]\n",
     "\n",
-    "# print(f\"data_dirs: {data_dirs}\")\n",
-    "# print(f\"movie_paths: {movie_paths}\")\n",
-    "# print(f\"movie_names: {movie_names}\")\n",
-    "# print(f\"true_value_csv_array: {true_value_csv_array}\")\n",
-    "# print(f\"true_value_rri_csv_array: {true_value_rri_csv_array}\")"
+    "print(f\"data_dirs: {data_dirs}\")\n",
+    "print(f\"movie_paths: {movie_paths}\")\n",
+    "print(f\"movie_names: {movie_names}\")\n",
+    "print(f\"true_value_csv_array: {true_value_csv_array}\")\n",
+    "print(f\"true_value_rri_csv_array: {true_value_rri_csv_array}\")"
    ]
   },
   {
@@ -1482,7 +1482,7 @@
    "id": "73eb5e34",
    "metadata": {},
    "source": [
-    "## 窓ごとにbpmMAEを算出"
+    "## 窓ごとにbpmMAE・尖度・歪度を算出"
    ]
   },
   {
@@ -1680,14 +1680,6 @@
     "    \n",
     "    print(f\"\\nBVP信号抽出完了\")\n",
     "    return raw_bvp_signal, filtered_bvp_signal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a45e3a32",
-   "metadata": {},
-   "source": [
-    "# ToDo 尖度と歪度を求めるコードを以下に追加"
    ]
   },
   {
@@ -1984,12 +1976,6 @@
     "    # 上位を表示\n",
     "    print(f\"\\n=== {title_prefix}MAEと相関が強い特徴量 Top {min(top_n, len(corr_df))} ===\")\n",
     "    print(corr_df.head(top_n).to_string(index=False))\n",
-    "    \n",
-    "    # CSVに保存\n",
-    "    if save_path:\n",
-    "        csv_path = save_path.replace('.png', '_correlations.csv')\n",
-    "        corr_df.to_csv(csv_path, index=False)\n",
-    "        print(f\"相関係数CSVを保存: {csv_path}\")\n",
     "    \n",
     "    # 可視化\n",
     "    top_n_actual = min(top_n, len(corr_df))\n",
@@ -2365,7 +2351,11 @@
     "            title_prefix=f\"{dataName} - {window_size}s: \",\n",
     "            top_n=20\n",
     "        )\n",
-    "        \n",
+    "\n",
+    "            # CSVに保存\n",
+    "        corr_df.to_csv(os.path.join(save_dir, \"feature_mae_correlations.csv\"), index=False, encoding='utf-8-sig')\n",
+    "        print(f\"相関係数CSVを保存: {os.path.join(save_dir, 'feature_mae_correlations.csv')}\")\n",
+    "\n",
     "        # MAEと指標の時系列プロット\n",
     "        if corr_df is not None:\n",
     "            plot_window_param_mae_time_series(\n",
@@ -2384,8 +2374,7 @@
     "                corr_df=corr_df,\n",
     "                save_path=os.path.join(save_dir, \"param_vs_mae_scatter.png\"),\n",
     "                title_prefix=f\"{dataName} - {window_size}s: \"\n",
-    "            )\n",
-    "            "
+    "            )"
    ]
   },
   {
@@ -2394,6 +2383,14 @@
    "metadata": {},
    "source": [
     "パターン2: 全動画を統合 × 窓長ごとに相関解析"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd921412",
+   "metadata": {},
+   "source": [
+    "ここ実行前にpath関連を全動画に変更"
    ]
   },
   {
@@ -2562,7 +2559,297 @@
    "id": "640079ce",
    "metadata": {},
    "source": [
-    "### 偏相関解析"
+    "### 偏相関解析(今回は1つの変数で蒸気の有無を予測するのでしなくてよい)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05cad970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_partial_correlations(df, target_col, feature_cols, method='pearson'):\n",
+    "    \"\"\"\n",
+    "    各特徴量と目標変数の偏相関係数を計算\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    df : pd.DataFrame\n",
+    "        データフレーム\n",
+    "    target_col : str\n",
+    "        目標変数のカラム名 (例: 'bpm_MAE')\n",
+    "    feature_cols : list\n",
+    "        特徴量のカラム名リスト (上位N個)\n",
+    "    method : str\n",
+    "        相関係数の種類 ('pearson', 'spearman')\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    pd.DataFrame\n",
+    "        カラム: ['feature', 'simple_corr', 'partial_corr', 'p_value', 'diff']\n",
+    "        - simple_corr: 単純相関係数\n",
+    "        - partial_corr: 偏相関係数\n",
+    "        - p_value: 偏相関のp値\n",
+    "        - diff: simple_corr - partial_corr (減少量)\n",
+    "    \"\"\"\n",
+    "    import pingouin as pg\n",
+    "    \n",
+    "    results = []\n",
+    "    \n",
+    "    # 欠損値を除去\n",
+    "    df_clean = df[[target_col] + feature_cols].dropna()\n",
+    "    \n",
+    "    for feature in feature_cols:\n",
+    "        # 単純相関\n",
+    "        simple_corr = df_clean[feature].corr(df_clean[target_col], method=method)\n",
+    "        \n",
+    "        # 偏相関: 他の全特徴量を制御変数として使用\n",
+    "        covar = [f for f in feature_cols if f != feature]\n",
+    "        \n",
+    "        partial_result = pg.partial_corr(\n",
+    "            data=df_clean,\n",
+    "            x=feature,\n",
+    "            y=target_col,\n",
+    "            covar=covar,\n",
+    "            method=method\n",
+    "        )\n",
+    "        \n",
+    "        partial_corr = partial_result['r'].values[0]\n",
+    "        p_value = partial_result['p-val'].values[0]\n",
+    "        \n",
+    "        results.append({\n",
+    "            'feature': feature,\n",
+    "            'simple_corr': simple_corr,\n",
+    "            'partial_corr': partial_corr,\n",
+    "            'p_value': p_value,\n",
+    "            'diff': simple_corr - partial_corr\n",
+    "        })\n",
+    "    \n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    results_df = results_df.sort_values('partial_corr', key=abs, ascending=False)\n",
+    "    \n",
+    "    return results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3cf7887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_simple_vs_partial_correlation(results_df, save_path=None, title_prefix=\"\"):\n",
+    "    \"\"\"\n",
+    "    単純相関と偏相関の比較を可視化\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    results_df : pd.DataFrame\n",
+    "        calculate_partial_correlations() の出力\n",
+    "    save_path : str\n",
+    "        保存先パス\n",
+    "    title_prefix : str\n",
+    "        タイトルの接頭辞\n",
+    "    \"\"\"\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import numpy as np\n",
+    "    \n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
+    "    \n",
+    "    # ===== 左: 単純相関 vs 偏相関の棒グラフ =====\n",
+    "    ax1 = axes[0]\n",
+    "    x = np.arange(len(results_df))\n",
+    "    width = 0.35\n",
+    "    \n",
+    "    bars1 = ax1.barh(x - width/2, results_df['simple_corr'].abs(), \n",
+    "                     width, label='単純相関', alpha=0.8, color='steelblue')\n",
+    "    bars2 = ax1.barh(x + width/2, results_df['partial_corr'].abs(), \n",
+    "                     width, label='偏相関', alpha=0.8, color='coral')\n",
+    "    \n",
+    "    ax1.set_yticks(x)\n",
+    "    ax1.set_yticklabels(results_df['feature'], fontsize=9)\n",
+    "    ax1.set_xlabel('相関係数の絶対値', fontsize=11)\n",
+    "    ax1.set_title(f'{title_prefix}単純相関 vs 偏相関', fontsize=12, fontweight='bold')\n",
+    "    ax1.legend()\n",
+    "    ax1.grid(axis='x', alpha=0.3)\n",
+    "    ax1.invert_yaxis()\n",
+    "    \n",
+    "    # ===== 右: 相関の減少量 =====\n",
+    "    ax2 = axes[1]\n",
+    "    colors = ['red' if d > 0 else 'green' for d in results_df['diff']]\n",
+    "    \n",
+    "    ax2.barh(results_df['feature'], results_df['diff'], color=colors, alpha=0.7)\n",
+    "    ax2.set_xlabel('減少量 (単純相関 - 偏相関)', fontsize=11)\n",
+    "    ax2.set_title(f'{title_prefix}相関係数の減少量', fontsize=12, fontweight='bold')\n",
+    "    ax2.axvline(x=0, color='black', linestyle='--', linewidth=0.8)\n",
+    "    ax2.grid(axis='x', alpha=0.3)\n",
+    "    ax2.invert_yaxis()\n",
+    "    \n",
+    "    # 注釈\n",
+    "    ax2.text(0.98, 0.02, '正: 他の特徴量との相関が高い\\n負: 独立性が高い', \n",
+    "             transform=ax2.transAxes, fontsize=9, \n",
+    "             verticalalignment='bottom', horizontalalignment='right',\n",
+    "             bbox=dict(boxstyle='round', facecolor='wheat', alpha=0.5))\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    if save_path:\n",
+    "        plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
+    "        print(f\"保存完了: {save_path}\")\n",
+    "    \n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b6182b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(movie_paths)):\n",
+    "    inputMoviePath = movie_paths[i]\n",
+    "    rootDir = data_dirs[i]\n",
+    "    dataName = movie_names[i]\n",
+    "    \n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"動画: {dataName}\")\n",
+    "    print(f\"{'='*80}\")\n",
+    "    \n",
+    "    # window_analysis (MAEを含む)のCSVを読み込み\n",
+    "    window_analysis_csv_path = os.path.join(rootDir, SAVE_DIR, f'window_analysis_{dataName}.csv')\n",
+    "    \n",
+    "    if not os.path.exists(window_analysis_csv_path):\n",
+    "        print(f\"警告: {window_analysis_csv_path} が見つかりません。スキップします。\")\n",
+    "        continue\n",
+    "    \n",
+    "    # window_analysis_dataframeを読み込み(MAEを含む)\n",
+    "    print(\"窓解析データを読み込み中...\")\n",
+    "    window_analysis_dataframe = pd.read_csv(window_analysis_csv_path)\n",
+    "    \n",
+    "    # window_signals (特徴量)のCSVを読み込み\n",
+    "    window_signals_csv_path = os.path.join(rootDir, SAVE_DIR, f'window_signals_{dataName}.csv')\n",
+    "    \n",
+    "    if not os.path.exists(window_signals_csv_path):\n",
+    "        print(f\"警告: {window_signals_csv_path} が見つかりません。スキップします。\")\n",
+    "        continue\n",
+    "\n",
+    "    # =====================特徴量データを読み込み======================\n",
+    "    window_signals_dataframe = pd.read_csv(window_signals_csv_path)\n",
+    "    \n",
+    "    # 時系列データの統計量を計算して特徴量に追加\n",
+    "    array_cols = [\n",
+    "        'r_signal_in_window', 'g_signal_in_window', 'b_signal_in_window',\n",
+    "        'r_std_signal_in_window', 'g_std_signal_in_window', 'b_std_signal_in_window',\n",
+    "        'h_signal_in_window', 's_signal_in_window', 'v_signal_in_window',\n",
+    "        'h_std_signal_in_window', 's_std_signal_in_window', 'v_std_signal_in_window',\n",
+    "        'lightness_signal_in_window', \n",
+    "        'lbp_entropy', 'lbp_variance', 'lbp_skewness', 'lbp_kurtosis',\n",
+    "        'lbp_chi2_distance', 'lbp_uniform_ratio',\n",
+    "        'canny_edge_ratio', 'glcm_isotropy',\n",
+    "        'flow_mean_motion', 'flow_std_motion', 'flow_ratio_1px', 'flow_ratio_5px', 'flow_ratio_10px',\n",
+    "        'wavelet_hh_energies', 'fft_high_freq_ratios',\n",
+    "        'angles_in_window'\n",
+    "    ]\n",
+    "    \n",
+    "    # それぞれに対して集約統計量を計算\n",
+    "    for col in array_cols:\n",
+    "        if col in window_signals_dataframe.columns:\n",
+    "            print(f\"処理中: {col}\")\n",
+    "            stats_df = window_signals_dataframe[col].apply(calculate_stats)\n",
+    "            stats_df.columns = [f'{col}_mean', f'{col}_std', f'{col}_max', f'{col}_min', f'{col}_iqr']\n",
+    "            window_signals_dataframe = pd.concat([window_signals_dataframe, stats_df], axis=1)\n",
+    "    \n",
+    "    # window_indexでマージして、MAEを追加\n",
+    "    window_signals_dataframe = pd.merge(\n",
+    "        window_signals_dataframe, \n",
+    "        window_analysis_dataframe[['window_index', 'bpm_MAE', 'ecg_bpm_mean', 'rppg_bpm']],\n",
+    "        on='window_index',\n",
+    "        how='left'\n",
+    "    )\n",
+    "\n",
+    "    # =====================窓特徴量データを読み込み==========================\n",
+    "    df_all, feature_names = load_window_data(\n",
+    "        dataFrameArrays=[window_signals_dataframe],\n",
+    "        data_names=[dataName],\n",
+    "        exclude_cols=[\n",
+    "            'window_index', 'window_size', 'stride', 'frame_start', 'frame_end',\n",
+    "            'window_start_time', 'window_end_time', 'data_name', 'ecg_bpm_in_window', \n",
+    "            'ecg_bpm_in_window_mean', 'bpm_MAE', 'ecg_bpm_mean', 'rppg_bpm'\n",
+    "        ],\n",
+    "        array_cols=array_cols\n",
+    "    )\n",
+    "\n",
+    "    print(f\"特徴量数: {len(feature_names)}\")\n",
+    "    \n",
+    "    # =====================窓長ごとに偏相関解析=====================\n",
+    "    for window_size in WINDOW_SIZES:\n",
+    "        print(f\"\\n{'─'*60}\")\n",
+    "        print(f\"窓長: {window_size}秒\")\n",
+    "        print(f\"{'─'*60}\")\n",
+    "        \n",
+    "        # 該当する窓長のデータのみを抽出\n",
+    "        df_window = df_all[df_all['window_size'] == window_size].copy()\n",
+    "        \n",
+    "        if len(df_window) == 0:\n",
+    "            print(f\"警告: 窓長{window_size}秒のデータがありません。スキップします。\")\n",
+    "            continue\n",
+    "        \n",
+    "        print(f\"データ数: {len(df_window)} 窓\")\n",
+    "        \n",
+    "        # 保存ディレクトリ\n",
+    "        save_dir = os.path.join(rootDir, SAVE_DIR, 'corr_window_analysis', \n",
+    "                               f'per_video_per_window', f'{dataName}_window_{window_size}s')\n",
+    "        os.makedirs(save_dir, exist_ok=True)\n",
+    "        \n",
+    "        # 相関解析結果を読み込み\n",
+    "        corr_csv_path = os.path.join(save_dir, 'feature_mae_correlations.csv')\n",
+    "        \n",
+    "        if not os.path.exists(corr_csv_path):\n",
+    "            print(f\"警告: {corr_csv_path} が見つかりません。スキップします。\")\n",
+    "            continue\n",
+    "        \n",
+    "        print(\"相関解析データを読み込み中...\")\n",
+    "        corr_df = pd.read_csv(corr_csv_path)\n",
+    "        \n",
+    "        # ===== 偏相関解析 (新規) =====\n",
+    "        print(\"\\n[偏相関解析]\")\n",
+    "        \n",
+    "        # 上位10特徴量を取得\n",
+    "        top_features = corr_df.head(10)['feature'].tolist()\n",
+    "        print(f\"上位10特徴量: {top_features}\")\n",
+    "        \n",
+    "        # 偏相関を計算\n",
+    "        try:\n",
+    "            partial_corr_df = calculate_partial_correlations(\n",
+    "                df=df_window,\n",
+    "                target_col='bpm_MAE',\n",
+    "                feature_cols=top_features,\n",
+    "                method='pearson'\n",
+    "            )\n",
+    "            \n",
+    "            # 結果を表示\n",
+    "            print(\"\\n偏相関解析結果:\")\n",
+    "            print(partial_corr_df.to_string(index=False))\n",
+    "            \n",
+    "            # 可視化\n",
+    "            plot_simple_vs_partial_correlation(\n",
+    "                results_df=partial_corr_df,\n",
+    "                save_path=os.path.join(save_dir, \"simple_vs_partial_correlation.png\"),\n",
+    "                title_prefix=f\"{dataName} - {window_size}s: \"\n",
+    "            )\n",
+    "            \n",
+    "            # CSVとして保存\n",
+    "            partial_corr_df.to_csv(\n",
+    "                os.path.join(save_dir, \"partial_correlations.csv\"),\n",
+    "                index=False\n",
+    "            )\n",
+    "            print(f\"偏相関結果を保存しました: {save_dir}/partial_correlations.csv\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"エラー: 偏相関計算中にエラーが発生しました: {e}\")\n",
+    "            continue"
    ]
   }
  ],
